# batonkeep

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  searxng-settings.yml
backend/: Dockerfile  Dockerfile.base  alembic.ini  entrypoint.sh  exec-env.toml  pyproject.toml  sandbox-spawn.c
backend/alembic/: env.py
backend/alembic/versions/: 3f1347e9a746_approval_batch_id.py  4e8b1c9d2f35_default_project_backfill.py  568318e3701c_initial_schema.py  5f9a2b3c4d61_approvals_receipt_stamps.py  6a0b3c4d5e72_pinned_evidence_receipt_evidence.py  9d3f2c8b7a10_projects_substrate.py  a1b2c3d4e5f6_run_retry_idempotency.py  a2b3c4d5e6f7_task_timeout.py  a7b8c9d0e1f2_session_turn_model.py  b2c3d4e5f6a7_exec_policy.py  b3c4d5e6f7a8_session_turn_output_flags.py  b8c9d0e1f2a3_session_model_override.py  c3d4e5f6a7b8_session_turn_cost.py  c4d5e6f7a8b9_work_item_subtasks.py  c9d0e1f2a3b4_run_assets.py  d0e1f2a3b4c5_routing_decisions.py  d4e5f6a7b8c9_session_image_model.py  d5e6f7a8b9c0_run_output_flags.py  e1f2a3b4c5d6_routing_decision_outcome.py  e5f6a7b8c9d0_task_image_model.py  e6f7a8b9c0d1_planner_agent.py  f6a7b8c9d0e1_session_budget_cache_tokens.py
backend/app/: approvals.py  auth.py  canonical.py  cli_policy.py  config.py  console.py  cost.py  credentials.py  custom_providers.py  db.py  evidence.py  exec_env.py  logging_config.py  main.py  models.py  orchestrator.py  planner.py  policy.py  project_context.py  projects.py  pty_session.py  quota.py  redact.py  router.py  sandbox.py  scheduler.py  schemas.py  seed.py  subscription_usage.py  subtasks.py  task_assets.py  task_workspace.py  telemetry.py  totp.py  version.py  web_tty.py  work_ledger.py  ws.py
backend/app/providers/: base.py  cli_executor.py  cli_interactive.py  image_models.py  mock.py  registry.py  (+5 more)
backend/config/: provider-instances.example.json
backend/scripts/: auth.sh  batonkeep-backup.sh  batonkeep-restore.sh  install_exec_env.py  repair-workspace-repo.py  test_cli_live.py  verify-jail.sh  verify_restore.py  verify_substrate_migration.py
backend/tests/: conftest.py  test_approvals.py  test_auth.py  test_batch_approval.py  test_canonical_promotion.py  test_cf_pages.py  test_cli_executor_teardown.py  test_cli_executor_truncation.py  test_cli_interactive.py  test_cli_parser.py  test_cli_policy.py  test_code_exec.py  test_compaction.py  test_context_projection.py  test_cors.py  test_cost.py  test_custom_providers.py  test_db_migrations.py  test_evidence_projection.py  test_exec_env.py  test_exec_seam.py  test_file_browser.py  test_filesystem_tools.py  test_gemini_executor.py  test_git_trust.py  test_hardening.py  test_image_gen.py  test_image_model_selection.py  test_imports.py  test_mcp_provider.py  test_model_catalog.py  test_model_pricing.py  test_orchestrator.py  test_p7.py  test_p9.py  test_p9_sensitivity.py  test_packaging.py  test_planner.py  test_planner_protocol.py  test_pna.py  (+32 more)
(+88 files in other folders)
