[project]
name = "batonkeep-backend"
version = "0.1.0"
description = "Cross-provider plan orchestrator backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.1",
    "starlette==1.3.1",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "apscheduler==3.10.4",
    "openai==1.58.1",
    "anthropic==0.40.0",
    "google-genai==2.8.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.7.0",
    "cryptography==48.0.1",
    "python-multipart==0.0.31",
    "websockets==14.1",
    "aiofiles==24.1.0",
    "greenlet==3.1.1",
    "pyte>=0.8.2",
    # P-0046 slice 4 — SDK-backed MCP tool seam (curated Tier A `fetch` server).
    # mcp 1.27 needs pydantic>=2.11 (hence the 2.10.3→2.13.4 bump). fastapi 0.137.1
    # drops starlette's upper cap (>=0.46), so we pin starlette==1.3.1 directly to
    # clear the Dependabot starlette CVE cluster; mcp needs only starlette>=0.27.
    "mcp==1.27.2",
    # 2026.6.4 relaxes the old httpx<0.28 pin (modelcontextprotocol/servers#3287);
    # resolves with starlette 1.3.1 / uvicorn 0.32.1.
    # Runs SSRF-fenced behind sandbox.wrap() (see mcp_provider.py).
    "mcp-server-fetch==2026.6.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "anyio==4.13.0",
    "ruff==0.8.6",
    "mypy==1.14.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "anyio==4.13.0",
    "ruff==0.8.6",
    "mypy==1.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
